# ossm-base

./: CONTRIBUTE.md  README.md  pyproject.toml
ossm_base/: __init__.py  model.py  types.py
